# unified-theming

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COLOR_PY_CORRUPTION_FIXED.md  CONTRIBUTING.md  DIAGNOSTIC_REPORT.md  GITHUB_REPO_SETUP_INSTRUCTIONS.md  HANDOFF_DAY1_CLAUDE_TO_QWEN.md  HANDOFF_DAY1_COMPLETE.md  HANDOFF_DAY1_QWEN_TO_OPENCODE.md  HANDOFF_DAY2.md  HANDOFF_DAY3.md  HANDOFF_DAY4.md  HANDOFF_TO_NEXT_AGENT.md  HANDOFF_TO_OPENCODE_AI.md  INSTALLATION_SUCCESS.md  LICENSE  MANIFEST.in  PHASE1_COMPLETE.md  PROJECT_STATE_MEMORY.md  QUICK_START.md  QWEN.md  QWEN_URGENT_color_py_FIXED_AGAIN.md  QWEN_WEEK2_DAY3_PROMPT.md  QWEN_WEEK2_DAY4_PROMPT.md  QWEN_WEEK2_DAY5_PROMPT.md  README.md  REFACTORING_FEASIBILITY_REPORT.md  RELEASE_NOTES_v0.5.0.md  SPRINT_DAY1_AGENT1_COMPLETE.md  SPRINT_DAY1_AGENT3_COMPLETE.md  WEEK1_DAY2_COMPLETE.md  WEEK1_VIBE_SESSION_WORKFLOW.md  WEEK2_DAY3_COMPLETE.md  WEEK2_DAY4_ASSESSMENT.md  WEEK2_DAY4_COMPLETE.md  WEEK2_DAY5_COMPLETE.md  (+13 more)
.github/workflows/: ci.yml
docs/: BRANCH_RECONCILIATION_PLAN.md  CLI_DEVELOPMENT_GUIDELINES.md  CLI_FIX_IMPLEMENTATION_DETAILS.md  CLI_TEST_FAILURES_RCA.md  FORMATTING_SETUP.md  GUI_SETUP_AND_TROUBLESHOOTING.md  HANDOFF_PROTOCOL.md  HANDOFF_TO_OPENCODE_AI.md  HANDOFF_TO_QWEN_CODER.md  INSTALLATION_TROUBLESHOOTING.md  REPOSITORY_CLEANUP_SUMMARY.md  UNIFIED_THEMING_SOLUTION.md  WEEK1_HANDOFF_SUMMARY.md  architecture.md  day5_completion_report.md  day5_work_summary.md  developer_guide.md  integration_test_scenarios.md  integration_test_specification.md  performance_benchmarks.md  qa_report_week1_day2.md  requirements_specification.md  test_implementation_week1.md  test_plan_week1.md  v0.5_release_criteria.md
examples/: gui_prototype.py  test_gui_prototype.py  token_usage.py
examples/tokens/: example_tokens.json  example_tokens_with_references.json
packaging/: README.md  build.sh  unified-theming.desktop
tests/: conftest.py  test_cli_basic.py  test_cli_commands.py  test_cli_commands_detailed.py  test_cli_create.py  test_cli_dry_run.py  test_color_spaces.py  test_color_utils.py  test_color_wcag.py  test_config_backup.py  test_e2e_workflow.py  test_examples.py  test_flatpak_handler.py  test_gnome_shell_handler.py  test_gnome_shell_handler_tokens.py  test_gtk_handler_tokens.py  test_integration.py  test_integration_pipeline.py  test_json_token_parser.py  test_manager.py  test_parser.py  test_parsers.py  test_qt_handler_tokens.py  test_renderers.py  test_system_detect.py  test_tokens.py  test_validation_utils.py
tests/fixtures/: __init__.py  integration_fixtures.py
tests/fixtures/IncompleteTheme/gtk-3.0/: gtk.css
tests/fixtures/MalformedTheme/gtk-4.0/: gtk.css
tests/fixtures/ValidTheme/: index.theme
tests/fixtures/ValidTheme/gtk-3.0/: gtk.css
tests/fixtures/ValidTheme/gtk-4.0/: gtk.css
unified_theming.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
unified_theming/cli/: commands.py  commands.py.backup
unified_theming/color/: __init__.py  operations.py  spaces.py  wcag.py
unified_theming/core/: config.py  exceptions.py  manager.py  parser.py  types.py  validation_utils.py
unified_theming/gui/: __init__.py  application.py  dialogs.py  launcher.py  widgets.py
unified_theming/handlers/: base.py  flatpak_handler.py  gnome_shell_handler.py  gtk_handler.py  qt_handler.py  snap_handler.py
unified_theming/parsers/: __init__.py  base.py  gtk.py  json_tokens.py
unified_theming/renderers/: __init__.py  base.py  gnome_shell.py  gtk.py  qt.py
unified_theming/tokens/: __init__.py  defaults.py  schema.py  validation.py
unified_theming/utils/: color.py  color.py.backup  color.py.corrupted  file.py  logging_config.py  system_detect.py  validation.py
