[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-theming"
version = "0.5.0"
description = "Unified Theming System for GTK, Qt, and containerized applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joshua Sadowsky", email = "joshua@example.com"}
]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: End Users/Desktop",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Desktop Environment",
     "Topic :: Utilities"
 ]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "chardet>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10.1",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
    "pre-commit>=2.17.0",
]
gui = [
    "PyGObject>=3.42.0"
]

  [project.scripts]
  unified-theming = "unified_theming.cli.commands:main"

[project.urls]
Homepage = "https://github.com/yourusername/unified-theming"
Repository = "https://github.com/yourusername/unified-theming"
Documentation = "https://github.com/yourusername/unified-theming#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["unified_theming*"]
exclude = ["tests*", "docs*", "examples*", "packaging*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov=unified_theming", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["unified_theming"]
omit = [
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/tests/*"
]

[tool.flake8]
max-line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Exclude modules with type annotation issues that need gradual typing improvements
[[tool.mypy.overrides]]
module = [
    "unified_theming.gui.*",
    "unified_theming.handlers.snap_handler",
    "unified_theming.handlers.flatpak_handler",
    "unified_theming.handlers.gtk_handler",
    "unified_theming.handlers.qt_handler",
    "unified_theming.cli.commands",
]
disallow_untyped_defs = false
warn_return_any = false